2005-12-01  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-comic.[ch]: Add buoh_comic_image_save for saving an image
	to disk
	
	* src/buoh-window.c: Save the original image instead of a new png when
	saving a copy.
	
	* src/buoh-comic-cache.c: Use buoh_comic_image_save for saving to disk

	* src/buoh.c: Use 644 instead of 755 for creating the user comics
	file when GTK+ version <= 2.6

2005-11-30  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-comic-cache.[ch]:
	* src/buoh-comic-loader.[ch]:
	* src/buoh-comic.[ch]: Add image property
	* src/buoh-view-comic.c:
	Store compressed images instead of pixbufs in cache. Reduce the cache
	size to 1MB. The memory consumption is really smaller right now. 
	
2005-11-29  Esteban Sanchez  <esteban@steve-o.org>

	* data/comics.xml: Sixteen new comics added. Userfriendly removed
	due to its irregular form of publishing.

2005-11-21  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-comic-manager-date.c: Minor code cleanup

2005-11-21  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh.c: Do disk access in an idle function when saving comic
	list changes.

2005-11-16  Bastien Nocera <hadess@hadess.net>

	* configure.in:
	* src/buoh-view-comic.c:
	* src/buoh-window.c:
	* src/buoh.c:
	Make buoh work with GTK+ 2.6

2005-11-16  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-add-comic-dialog.[ch]:
	* src/buoh-comic-list.[ch]:
	* src/buoh-comic-loader.[ch]:
	* src/buoh-comic-manager-date.[ch]:
	* src/buoh-comic-manager.[ch]:
	* src/buoh-comic.[ch]:
	* src/buoh-properties-dialog.[ch]:
	* src/buoh-view-comic.[ch]:
	* src/buoh-view-message.[ch]:
	* src/buoh-view.[ch]:
	* src/buoh-window.[ch]:
	* src/buoh.[ch]: 
	Code cleanups

2005-11-15  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/Makefile.am: Add cache files
	* src/buoh-comic-cache.[ch]:
	* src/buoh-comic.c: Cache use for pixbuf property
	* src/buoh.c: Create cache dir on startup if not exists